[package]
name = "kleer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = "clear your terminal with style"
repository = "https://github.com/MrPicklePinosaur/kleer"

[features]

[dependencies]
clap = { version = "4.1", features = ["derive"] }
crossterm = "0.23"

thiserror = "1"
anyhow = "1"
chrono = "0.4"
